k8s/overlays/uat/replicas-reward-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reward-service
spec:
  replicas: 2
