k8s/overlays/uat/ingress-delete.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasktreat-ingress
